--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.1, 8.2 ]
+        php: [ 7.3, 7.4, 8.0, 8.1 ]
         stability: [ lowest, highest ]
 
     steps:
