--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rap2hpoutre/fast-excel",
+    "name": "adaptit/fast-excel",
     "type": "library",
     "keywords": [
         "laravel",
@@ -10,9 +10,9 @@
     ],
     "description": "Fast Excel import/export for Laravel",
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0",
-        "openspout/openspout": "^4.1.1"
+        "php": "^7.3 || ^8.0",
+        "illuminate/support": "5.3.* || 5.4.* || 5.5.* || 5.6.* || 5.7.* || 5.8.* || ^6.0 || ^7.0 || ^8.0 || ^9.0",
+        "openspout/openspout": "^3"
     },
     "require-dev": {
         "illuminate/database": "^6.20.12 || ^7.30.4 || ^8.24.0 || ^9.0",
@@ -22,7 +22,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Rap2hpoutre\\FastExcel\\": "src/"
+            "AdaptIT\\FastExcel\\": "src/"
         },
         "files": [
             "src/functions/fastexcel.php"
@@ -30,13 +30,13 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Rap2hpoutre\\FastExcel\\Tests\\": "tests/"
+            "AdaptIT\\FastExcel\\Tests\\": "tests/"
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "Rap2hpoutre\\FastExcel\\Providers\\FastExcelServiceProvider"
+                "AdaptIT\\FastExcel\\Providers\\FastExcelServiceProvider"
             ]
         }
     },
